prevent NullPointerException if no detailed information is present