@@ -32,11 +32,14 @@ public class UsedTenuredRenderer extends PolygonChartRenderer {
         for (Iterator<GCEvent> i = model.getGCEvents(); i.hasNext();) {
             GCEvent event = i.next();
             GCEvent tenuredEvent = event.getTenured();
-            // e.g. "GC remark" of G1 algorithm does not contain memory information
-            if (tenuredEvent.getTotal() > 0) {
-                final double timestamp = event.getTimestamp() - model.getFirstPauseTimeStamp();
-                polygon.addPoint(timestamp, tenuredEvent.getPreUsed());
-                polygon.addPoint(timestamp, tenuredEvent.getPostUsed());
+            if (tenuredEvent != null) {
+                // only -XX:+PrintGCDetails adds information about generations
+                // e.g. "GC remark" of G1 algorithm does not contain memory information
+                if (tenuredEvent.getTotal() > 0) {
+                    final double timestamp = event.getTimestamp() - model.getFirstPauseTimeStamp();
+                    polygon.addPoint(timestamp, tenuredEvent.getPreUsed());
+                    polygon.addPoint(timestamp, tenuredEvent.getPostUsed());
+                }
             }
         }
         // dummy point to make the polygon complete
